--- a/sites.yml
+++ b/sites.yml
@@ -13,7 +13,7 @@
   url: https://svelte.dev
   repo: https://github.com/sveltejs/svelte
   # Sapper to SvelteKit migration in https://git.io/JXSh1
-  site_src: https://github.com/sveltejs/sites/blob/-/sites/svelte.dev
+  site_src: https://github.com/sveltejs/svelte/tree/-/sites/svelte.dev
   npm: https://npmjs.com/package/svelte
   description: Cybernetically enhanced web apps.
   uses: [CodeMirror, Mapbox, Docker]
@@ -847,3 +847,12 @@
   tags: [docs, tutorial, education, community]
   date_created: 2023-05-15
   date_added: 2023-07-27
+
+- title: Dotfyle
+  url: https://dotfyle.com
+  repo: https://github.com/codicocodes/dotfyle
+  description: Discover and share Neovim configurations and plugins.
+  uses: [TypeScript, PNPM, tRPC-SvelteKit, Prisma, Tailwind, Octokit]
+  tags: [neovim, dotfiles, community]
+  date_created: 2023-03-11
+  date_added: 2023-08-01
