--- a/tools.yml
+++ b/tools.yml
@@ -67,6 +67,7 @@ pocketbase: https://pocketbase.io
 postcss: https://postcss.org
 pre-commit: https://pre-commit.com
 prism: https://prismjs.com
+prisma: https://prisma.io
 prosemirror: https://prosemirror.net
 rehype: https://github.com/rehypejs/rehype
 release it: https://github.com/release-it/release-it
@@ -92,6 +93,7 @@ swell commerce: https://swell.is
 tailwind: https://tailwindcss.com
 testing library: https://testing-library.com
 three.js: https://threejs.org
+trpc-sveltekit: https://github.com/icflorescu/trpc-sveltekit
 turbo: https://github.com/vercel/turbo
 typescript: https://typescriptlang.org
 underscore: https://underscorejs.org
