--- a/tools.yml
+++ b/tools.yml
@@ -101,5 +101,6 @@ unocss: https://github.com/unocss/unocss
 uvu: https://github.com/lukeed/uvu
 vercel: https://vercel.com
 vitest: https://vitest.dev
+wasm: https://webassembly.org
 webgl: https://developer.mozilla.org/docs/Web/API/WebGL_API
 ytdl-core: https://github.com/fent/node-ytdl-core
