--- a/sites.yml
+++ b/sites.yml
@@ -309,8 +309,7 @@
 
 - title: inlang
   url: https://inlang.com
-  repo: https://github.com/inlang/inlang
-  site_src: https://github.com/inlang/inlang/blob/-/source-code/website
+  repo: https://github.com/inlang/monorepo
   description: Translate software products 2x faster.
   uses: [TypeScript, Vercel, IBM Carbon, Tailwind, Supabase]
   tags: [front-end, developer tool, localization, i18n]
