--- a/tools.yml
+++ b/tools.yml
@@ -22,6 +22,7 @@ electron: https://electronjs.org
 filepond: https://pqina.nl/filepond
 firebase: https://firebase.google.com
 flamethrower: https://github.com/fireship-io/flamethrower
+flutter: https://flutter.dev
 github api: https://docs.github.com/rest
 github pages: https://pages.github.com
 gitpod: https://gitpod.io
@@ -55,6 +56,7 @@ mocha: https://mochajs.org
 monaco: https://microsoft.github.io/monaco-editor
 motion one: https://motion.dev
 mvp.css: https://github.com/andybrewer/mvp
+nestjs: https://nestjs.com
 netlify: https://netlify.com
 notion: https://notion.so
 octokit: https://github.com/octokit/octokit.js
@@ -70,6 +72,7 @@ pre-commit: https://pre-commit.com
 prism: https://prismjs.com
 prisma: https://prisma.io
 prosemirror: https://prosemirror.net
+python: https://python.org
 rehype: https://github.com/rehypejs/rehype
 release it: https://github.com/release-it/release-it
 remark: https://github.com/remarkjs/remark
