--- a/tools.yml
+++ b/tools.yml
@@ -98,6 +98,7 @@ tailwind: https://tailwindcss.com
 testing library: https://testing-library.com
 three.js: https://threejs.org
 trpc-sveltekit: https://github.com/icflorescu/trpc-sveltekit
+trpc: https://trpc.io
 turbo: https://github.com/vercel/turbo
 typescript: https://typescriptlang.org
 underscore: https://underscorejs.org
