--- a/tools.yml
+++ b/tools.yml
@@ -4,6 +4,7 @@ aws: https://aws.amazon.com
 babel: https://babeljs.io
 changesets: https://github.com/changesets/changesets
 chart.js: https://chartjs.org
+cloudflare pages: https://pages.cloudflare.com
 cloudflare: https://cloudflare.com
 cloudinary: https://cloudinary.com
 codemirror: https://codemirror.net
