--- a/site/package.json
+++ b/site/package.json
@@ -17,31 +17,30 @@
     "test": "playwright test tests/*.test.ts"
   },
   "devDependencies": {
-    "@iconify/svelte": "^3.1.6",
-    "@playwright/test": "^1.42.1",
+    "@iconify/svelte": "^4.0.2",
+    "@playwright/test": "^1.44.1",
     "@rollup/plugin-yaml": "^4.1.2",
     "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.5.4",
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
+    "@sveltejs/kit": "^2.5.10",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
-    "eslint-plugin-svelte": "^2.35.1",
+    "eslint": "^9.3.0",
+    "eslint-plugin-svelte": "^2.39.0",
     "js-yaml": "^4.1.0",
-    "marked": "^12.0.1",
+    "marked": "^12.0.2",
     "prettier": "^3.2.5",
-    "prettier-plugin-svelte": "^3.2.2",
-    "puppeteer": "^22.6.0",
-    "sharp": "^0.33.3",
-    "svelte": "4.2.12",
-    "svelte-check": "^3.6.8",
-    "svelte-multiselect": "^10.2.0",
-    "svelte-preprocess": "^5.1.3",
+    "prettier-plugin-svelte": "^3.2.3",
+    "puppeteer": "^22.10.0",
+    "sharp": "^0.33.4",
+    "svelte": "4.2.17",
+    "svelte-check": "^3.8.0",
+    "svelte-multiselect": "^10.3.0",
+    "svelte-preprocess": "^5.1.4",
     "svelte-zoo": "^0.4.10",
-    "svelte2tsx": "^0.7.5",
-    "typescript": "5.4.3",
-    "vite": "^5.2.5"
+    "svelte2tsx": "^0.7.9",
+    "typescript": "5.4.5",
+    "typescript-eslint": "^7.11.0",
+    "vite": "^5.2.12"
   },
   "keywords": [
     "sveltekit",
