--- a/sites.yml
+++ b/sites.yml
@@ -893,6 +893,15 @@
   date_created: 2022-02-03
   date_added: 2024-01-22
 
+- title: Passkey authentication starter
+  url: https://d1rl0ue18b0151.cloudfront.net
+  repo: https://github.com/passlock-dev/svelte-passkeys
+  description: SvelteKit template featuring Passkeys, Social Sign in and more.
+  uses: [passlock, tailwind, superforms, lucia]
+  tags: [security, authentication, passkeys, template]
+  date_created: 2024-04-22
+  date_added: 2024-05-17
+
 - title: Svead
   url: https://svead.pages.dev
   repo: https://github.com/spences10/svead
