Add barnsworthburning.net (#126)
* Add barnsworthburning

* Fix spacing

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* add barnsworthburning to readme + fetch GH metadata

* downgrade eslint to v8 till typescript support

* Update screenshots for barnsworthburning

* fix outdated module doc str

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>
Co-authored-by: Janosh Riebesell <janosh.riebesell@gmail.com>

--- a/site/package.json
+++ b/site/package.json
@@ -24,7 +24,7 @@
     "@sveltejs/kit": "^2.5.18",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "dotenv": "^16.4.5",
-    "eslint": "^9.6.0",
+    "eslint": "8",
     "eslint-plugin-svelte": "^2.41.0",
     "js-yaml": "^4.1.0",
     "marked": "^13.0.2",
